--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard.j2
@@ -7,7 +7,7 @@
 {% if monitor_telemetry_postcard is arista.avd.defined %}
 !
 monitor telemetry postcard policy
-{%     if monitor_telemetry_postcard.disabled is arista.avd.defined and monitor_telemetry_postcard.disabled == false %}
+{%     if monitor_telemetry_postcard.disabled is arista.avd.defined(false) %}
    no disabled
 {%     endif %}
 {%     if monitor_telemetry_postcard.ingress is arista.avd.defined %}
@@ -33,20 +33,23 @@ monitor telemetry postcard policy
 {%         endif %}
 {%     endif %}
 {%     if monitor_telemetry_postcard.sample_policy.match_rule.rule_name is arista.avd.defined %}
-      match rule {{ monitor_telemetry_postcard.sample_policy.match_rule.rule_name }} ipv4
+{%         if monitor_telemetry_postcard.sample_policy.match_rule.ipversion is arista.avd.defined %}
+      match rule {{ monitor_telemetry_postcard.sample_policy.match_rule.rule_name }} {{ monitor_telemetry_postcard.sample_policy.match_rule.ipversion }}
+{%         endif %}
+{%         if monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix_address is arista.avd.defined and monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix_mask is arista.avd.defined %}
+         destination prefix {{ monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix_address }}/{{ monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix_mask }}
+{%         endif %}
+{%         if monitor_telemetry_postcard.sample_policy.match_rule.source_prefix is arista.avd.defined %}
+         source prefix {{ monitor_telemetry_postcard.sample_policy.match_rule.source_prefix.prefix_address }}/{{ monitor_telemetry_postcard.sample_policy.match_rule.source_prefix.prefix_mask }}
+{%         endif %}
+{%         if monitor_telemetry_postcard.sample_policy.match_rule.protocol is arista.avd.defined %}
+{%             if monitor_telemetry_postcard.sample_policy.match_rule.protocol.type_of_protocol is arista.avd.defined and monitor_telemetry_postcard.sample_policy.match_rule.protocol.destination_port is arista.avd.defined %}
+           protocol {{ monitor_telemetry_postcard.sample_policy.match_rule.protocol.type_of_protocol }} destination port {{ monitor_telemetry_postcard.sample_policy.match_rule.protocol.destination_port }}
+{%             endif %}
+{%         endif %}
 {%     else %}
       match ipv4-all-default ipv4
       !
       match ipv6-all-default ipv6
-{%     endif %}
-{%     if monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix1 is arista.avd.defined %}
-{%         set prefix_address = monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix1.prefix_address %}
-{%         set prefix_mask = monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix1.prefix_address %}
-         destination prefix {{ prefix_address }} {{ prefix_mask }}
-{%     endif %}
-{%     if monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix2 is arista.avd.defined %}
-{%         set prefix_address = monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix2.prefix_address %}
-{%         set prefix_mask = monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix2.prefix_mask %}
-          destination prefix {{ prefix_address }}/{{ prefix_mask }}
 {%     endif %}
 {% endif %}
