Feat(eos_cli_config_gen): Adding asset_tag for hardware

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/hardware.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/hardware.j2
@@ -16,3 +16,7 @@ hardware speed-group {{ speed_group.speed_group }} serdes {{ speed_group.serdes 
 {%         endif %}
 {%     endfor %}
 {% endif %}
+{% if hardware.asset_tag.switch is arista.avd.defined %}
+!
+hardware asset_tag switch {{ hardware.asset_tag.switch }}
+{% endif %}
