--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard.j2
@@ -11,8 +11,14 @@ monitor telemetry postcard policy
    no disabled
 {%     endif %}
 {%     if monitor_telemetry_postcard.ingress is arista.avd.defined %}
-{%         if monitor_telemetry_postcard.ingress.collection.source is arista.avd.defined and monitor_telemetry_postcard.ingress.collection.destination is arista.avd.defined %}
-   ingress collection gre source {{ monitor_telemetry_postcard.ingress.collection.source }} {{ monitor_telemetry_postcard.ingress.collection.destination }}
+{%         if monitor_telemetry_postcard.ingress.collection.source is arista.avd.defined and monitor_telemetry_postcard.ingress.collection.destination is arista.avd.defined and monitor_telemetry_postcard.ingress.collection.version is arista.avd.defined(2) %}
+   ingress collection gre source {{ monitor_telemetry_postcard.ingress.collection.source }} destination {{ monitor_telemetry_postcard.ingress.collection.destination }} version 2
+{%         elif monitor_telemetry_postcard.ingress.collection.source is arista.avd.defined and monitor_telemetry_postcard.ingress.collection.destination is arista.avd.defined %}
+{%             if monitor_telemetry_postcard.ingress.collection.version is arista.avd.defined(1) %}
+   ingress collection gre source {{ monitor_telemetry_postcard.ingress.collection.source }} destination {{ monitor_telemetry_postcard.ingress.collection.destination }}
+{%             else %}
+   ingress collection gre source {{ monitor_telemetry_postcard.ingress.collection.source }} destination {{ monitor_telemetry_postcard.ingress.collection.destination }}
+{%             endif %}
 {%         endif %}
 {%     endif %}
 {%     if monitor_telemetry_postcard.ingress.sample.rate is arista.avd.defined %}
@@ -21,37 +27,43 @@ monitor telemetry postcard policy
 {%     if monitor_telemetry_postcard.ingress.sample.tcp_udp_checksum is arista.avd.defined %}
    ingress sample tcp-udp-checksum {{ monitor_telemetry_postcard.ingress.sample.tcp_udp_checksum }}
 {%     endif %}
-{%     if monitor_telemetry_postcard.profile.name is arista.avd.defined %}
-   profile {{ monitor_telemetry_postcard.profile.name }}
-{%         if monitor_telemetry_postcard.profile.ingress_sample_policy is arista.avd.defined %}
-      ingress sample policy {{ monitor_telemetry_postcard.profile.ingress_sample_policy }}
-{%         endif %}
-{%     endif %}
-{%     if monitor_telemetry_postcard.sample_policy is arista.avd.defined %}
-{%         if monitor_telemetry_postcard.sample_policy.name is arista.avd.defined %}
-   sample policy {{ monitor_telemetry_postcard.sample_policy.name }}
-{%         endif %}
-{%     endif %}
-{%     if monitor_telemetry_postcard.sample_policy.match_rule is arista.avd.defined %}
-{%         if monitor_telemetry_postcard.sample_policy.match_rule.ipversion is arista.avd.defined and monitor_telemetry_postcard.sample_policy.match_rule.rule_name is arista.avd.defined %}
-      match rule {{ monitor_telemetry_postcard.sample_policy.match_rule.rule_name }} {{ monitor_telemetry_postcard.sample_policy.match_rule.ipversion }}
-{%         endif %}
-{%         if monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix_address is arista.avd.defined and monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix_mask is arista.avd.defined %}
-         destination prefix {{ monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix_address }}/{{ monitor_telemetry_postcard.sample_policy.match_rule.destination_prefix.prefix_mask }}
-{%         endif %}
-{%         if monitor_telemetry_postcard.sample_policy.match_rule.source_prefix is arista.avd.defined %}
-         source prefix {{ monitor_telemetry_postcard.sample_policy.match_rule.source_prefix.prefix_address }}/{{ monitor_telemetry_postcard.sample_policy.match_rule.source_prefix.prefix_mask }}
-{%         endif %}
-{%         if monitor_telemetry_postcard.sample_policy.match_rule.protocol is arista.avd.defined %}
-{%             if monitor_telemetry_postcard.sample_policy.match_rule.protocol.type_of_protocol is arista.avd.defined and monitor_telemetry_postcard.sample_policy.match_rule.protocol.destination_port is arista.avd.defined %}
-{%                 for protocol in monitor_telemetry_postcard.sample_policy.match_rule.protocol.destination_port | sort(reverse = True) %}
-         protocol {{ monitor_telemetry_postcard.sample_policy.match_rule.protocol.type_of_protocol }} destination port {{ protocol }}
-{%                 endfor %}
+{%     if monitor_telemetry_postcard.profiles is arista.avd.defined %}
+{%         for profile in monitor_telemetry_postcard.profiles %}
+   profile {{ profile.name }}
+{%             if profile.ingress_sample_policy is arista.avd.defined %}
+      ingress sample policy {{ profile.ingress_sample_policy }}
 {%             endif %}
-{%         endif %}
-{%     else %}
+{%         endfor %}
+{%     endif %}
+{%     if monitor_telemetry_postcard.sample_policies is arista.avd.defined %}
+{%         for policy in monitor_telemetry_postcard.sample_policies %}
+{%             if policy.name is arista.avd.defined %}
+   sample policy {{ policy.name }}
+{%             endif %}
+{%             if policy.match_rules is arista.avd.defined %}
+{%                 for rule in policy.match_rules %}
+{%                     if rule.type is arista.avd.defined and rule.rule_name is arista.avd.defined %}
+      match rule {{ rule.rule_name }} {{ rule.type }}
+{%                     endif %}
+{%                     if rule.destination_prefix is arista.avd.defined %}
+         destination prefix {{ rule.destination_prefix }}
+{%                     endif %}
+{%                     if rule.source_prefix is arista.avd.defined %}
+         source prefix {{ rule.source_prefix }}
+{%                     endif %}
+{%                     if rule.protocol is arista.avd.defined %}
+{%                         if rule.protocol.protocol_type is arista.avd.defined and rule.protocol.destination_port is arista.avd.defined %}
+{%                             for protocol in rule.protocol.destination_port | sort(reverse = True) %}
+         protocol {{ rule.protocol.protocol_type }} destination port {{ protocol }}
+{%                             endfor %}
+{%                         endif %}
+{%                     endif %}
+{%                 endfor %}
+{%             else %}
       match ipv4-all-default ipv4
       !
       match ipv6-all-default ipv6
+{%             endif %}
+{%         endfor %}
 {%     endif %}
 {% endif %}
