--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-qos.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-qos.j2
@@ -18,24 +18,20 @@ policy-map type quality-of-service {{ policy_map.name }}
       set {{ cli_set }} {{ class.set[set] }}
 {%             endif %}
 {%         endfor %}
-{%         if class.police.cir is arista.avd.defined %}
-{%             if class.police.cir.cir_rate is arista.avd.defined and class.police.cir.bc is arista.avd.defined %}
-      police cir {{ class.police.cir.cir_rate }} {{ class.police.cir.cir_unit | arista.avd.default('bps') }} bc {{ class.police.cir.bc }} {{ class.police.cir.bc_unit | arista.avd.default('bytes') }}
-{%             endif %}
-{%         elif class.police.rate is arista.avd.defined %}
+{%         if class.police.rate is arista.avd.defined %}
+{%             set police_cli = "police rate " %}
 {%             if class.police.rate.lower_rate is arista.avd.defined and class.police.rate.lower_rate_burst_size is arista.avd.defined %}
+{%                 set police_cli = police_cli ~ class.police.rate.lower_rate ~ " " ~ class.police.rate.rate_unit | arista.avd.default('bps') ~ " burst-size " ~ class.police.rate.lower_rate_burst_size ~ " " ~ class.police.rate.burst_size_unit | arista.avd.default('bytes') %}
 {%                 if class.police.rate.higher_rate is arista.avd.defined and class.police.rate.higher_rate_burst_size is arista.avd.defined %}
 {%                     if class.police.rate.action is arista.avd.defined("dscp") and class.police.rate.dscp_value is arista.avd.defined %}
-      police rate {{ class.police.rate.lower_rate }} {{ class.police.rate.rate_unit | arista.avd.default('bps') }} burst-size {{ class.police.rate.lower_rate_burst_size }} {{ class.police.rate.burst_size_unit | arista.avd.default('bytes') }} action set dscp {{ class.police.rate.dscp_value }} rate {{ class.police.rate.higher_rate }} {{ class.police.rate.rate_unit | arista.avd.default('bps') }} {{ class.police.rate.higher_rate_burst_size }} {{ class.police.rate.burst_size_unit | arista.avd.default('bytes') }}
+{%                         set police_cli = police_cli ~ " action set dscp " ~ class.police.rate.dscp_value %}
 {%                     elif class.police.rate.action is arista.avd.defined("drop-precedence") %}
-      police rate {{ class.police.rate.lower_rate }} {{ class.police.rate.rate_unit | arista.avd.default('bps') }} burst-size {{ class.police.rate.lower_rate_burst_size }} {{ class.police.rate.burst_size_unit | arista.avd.default('bytes') }} action set drop-precedence rate {{ class.police.rate.higher_rate }} {{ class.police.rate.rate_unit | arista.avd.default('bps') }} {{ class.police.rate.higher_rate_burst_size }} {{ class.police.rate.burst_size_unit | arista.avd.default('bytes') }}
-{%                     else %}
-      police rate {{ class.police.rate.lower_rate }} {{ class.police.rate.rate_unit | arista.avd.default('bps') }} burst-size {{ class.police.rate.lower_rate_burst_size }} {{ class.police.rate.burst_size_unit | arista.avd.default('bytes') }} rate {{ class.police.rate.higher_rate }} {{ class.police.rate.rate_unit | arista.avd.default('bps') }} {{ class.police.rate.higher_rate_burst_size }} {{ class.police.rate.burst_size_unit | arista.avd.default('bytes') }}
+{%                         set police_cli = police_cli ~ " action set drop-precedence"  %}
 {%                     endif %}
-{%                 else %}
-      police rate {{ class.police.rate.lower_rate }} {{ class.police.rate.rate_unit | arista.avd.default('bps') }} burst-size {{ class.police.rate.lower_rate_burst_size }} {{ class.police.rate.burst_size_unit | arista.avd.default('bytes') }}
+{%                     set police_cli = police_cli ~ " rate " ~ class.police.rate.higher_rate ~ " " ~ class.police.rate.rate_unit | arista.avd.default('bps') ~ " burst-size " ~ class.police.rate.higher_rate_burst_size ~ " " ~ class.police.rate.burst_size_unit | arista.avd.default('bytes') %}
 {%                 endif %}
 {%             endif %}
+      {{ police_cli }}
 {%         endif %}
 {%     endfor %}
 {% endfor %}
