--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/port-channel-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/port-channel-interfaces.j2
@@ -466,4 +466,28 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.eos_cli is arista.avd.defined %}
    {{ port_channel_interface.eos_cli | indent(3, false) }}
 {%     endif %}
+{%     if port_channel_interface.ip_igmp_host_proxy.enabled is arista.avd.defined(true) %}
+{%         set host_proxy_cli =  "ip igmp host-proxy" %}
+   {{ host_proxy_cli }}
+{%         if port_channel_interface.ip_igmp_host_proxy.groups is arista.avd.defined %}
+{%             for proxy_group in port_channel_interface.ip_igmp_host_proxy.groups %}
+{%                 if proxy_group.exclude is arista.avd.defined or proxy_group.include is arista.avd.defined %}
+{%                     if proxy_group.exclude is arista.avd.defined %}
+   {{ host_proxy_cli }} {{ proxy_group.group }} exclude {{ proxy_group.exclude }}
+{%                     endif %}
+{%                     if proxy_group.include is arista.avd.defined %}
+   {{ host_proxy_cli }} {{ proxy_group.group }} include {{ proxy_group.include }}
+{%                     endif %}
+{%                 elif proxy_group.group is arista.avd.defined %}
+   {{ host_proxy_cli }} {{ proxy_group.group }}
+{%                 endif %}
+{%             endfor %}
+{%         endif %}
+{%         if port_channel_interface.ip_igmp_host_proxy.report_interval is arista.avd.defined %}
+   {{ host_proxy_cli }} report-interval {{ port_channel_interface.ip_igmp_host_proxy.report_interval }}
+{%         endif %}
+{%         if port_channel_interface.ip_igmp_host_proxy.version is arista.avd.defined %}
+   {{ host_proxy_cli }} version {{ port_channel_interface.ip_igmp_host_proxy.version }}
+{%         endif %}
+{%     endif %}
 {% endfor %}
