--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -642,6 +642,12 @@ router bgp {{ router_bgp.as }}
 {%         if router_bgp.address_family_evpn.route.import_match_failure_action is arista.avd.defined('discard') %}
       route import match-failure action discard
 {%         endif %}
+{%         if router_bgp.address_family_evpn.route.import_ethernet_segment_ip_mass_withdraw is arista.avd.defined(true) %}
+      route import ethernet-segment ip mass-withdraw
+{%         endif %}
+{%         if router_bgp.address_family_evpn.route.export_ethernet_segment_ip_mass_withdraw is arista.avd.defined(true) %}
+      route export ethernet-segment ip mass-withdraw
+{%         endif %}
 {%     endif %}
 {# address family flow-spec ipv4 activation #}
 {%     if router_bgp.address_family_flow_spec_ipv4 is arista.avd.defined %}
