--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/vlan-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/vlan-interfaces.j2
@@ -215,11 +215,23 @@ interface {{ vlan_interface.name }}
 {%     if vlan_interface.pim.ipv4.sparse_mode is arista.avd.defined(true) %}
    pim ipv4 sparse-mode
 {%     endif %}
+{%     if vlan_interface.pim.ipv4.bidirectional is arista.avd.defined(true) %}
+   pim ipv4 bidirectional
+{%     endif %}
 {%     if vlan_interface.pim.ipv4.border_router is arista.avd.defined(true) %}
    pim ipv4 border-router
 {%     endif %}
+{%     if vlan_interface.pim.ipv4.hello.interval is arista.avd.defined %}
+   pim ipv4 hello interval {{ vlan_interface.pim.ipv4.hello.interval }}
+{%     endif %}
+{%     if vlan_interface.pim.ipv4.hello.count is arista.avd.defined %}
+   pim ipv4 hello count {{ vlan_interface.pim.ipv4.hello.count }}
+{%     endif %}
 {%     if vlan_interface.pim.ipv4.dr_priority is arista.avd.defined %}
    pim ipv4 dr-priority {{ vlan_interface.pim.ipv4.dr_priority }}
+{%     endif %}
+{%     if vlan_interface.pim.ipv4.bfd is arista.avd.defined(true) %}
+   pim ipv4 bfd
 {%     endif %}
 {%     if vlan_interface.pim.ipv4.local_interface is arista.avd.defined %}
    pim ipv4 local-interface {{ vlan_interface.pim.ipv4.local_interface }}
