Added punctuations to descriptions

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/monitor-telemetry-postcard.j2
@@ -51,12 +51,15 @@ monitor telemetry postcard policy
 {%                     if rule.source_prefix is arista.avd.defined %}
          source prefix {{ rule.source_prefix }}
 {%                     endif %}
-{%                     if rule.protocol is arista.avd.defined %}
-{%                         if rule.protocol.protocol_type is arista.avd.defined and rule.protocol.destination_port is arista.avd.defined %}
-{%                             for protocol in rule.protocol.destination_port | sort(reverse = True) %}
-         protocol {{ rule.protocol.protocol_type }} destination port {{ protocol }}
-{%                             endfor %}
-{%                         endif %}
+{%                     if rule.protocol_type is arista.avd.defined and rule.destination_port is arista.avd.defined %}
+{%                         for protocol in rule.destination_port | sort(reverse = True) %}
+         protocol {{ rule.protocol_type }} destination port {{ protocol }}
+{%                         endfor %}
+{%                     endif %}
+{%                     if rule.protocol_type is arista.avd.defined and rule.source_port is arista.avd.defined %}
+{%                         for protocol in rule.source_port | sort(reverse = True) %}
+         protocol {{ rule.protocol_type }} source port {{ protocol }}
+{%                         endfor %}
 {%                     endif %}
 {%                 endfor %}
 {%             else %}
