Add as_notation to router_bgp eos_cli_gen

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
@@ -8,6 +8,8 @@
 
 ### Router BGP
 
+ASN Notation Mode: {{ router_bgp.asn_notation | arista.avd.default('asplain') }}
+
 #### Router BGP Summary
 
 | BGP AS | Router ID |
