Fix templates Add test cases

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-bgp.j2
@@ -8,7 +8,7 @@
 
 ### Router BGP
 
-ASN Notation Mode: {{ router_bgp.asn_notation | arista.avd.default('asplain') }}
+ASN Notation: {{ router_bgp.as_notation | arista.avd.default('asplain') }}
 
 #### Router BGP Summary
 
