Fix(eos_cli_config_gen): Replacing 'transparent' mode in ptp with other supported valid values

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ptp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/ptp.j2
@@ -31,8 +31,7 @@ ptp message-type general dscp {{ ptp.message_type.general.dscp }} default
 ptp message-type event dscp {{ ptp.message_type.event.dscp }} default
 {%     endif %}
 {%     if ptp.mode is arista.avd.defined %}
-{# Update one-step support for "e2etransparent" mode as well, when it is available in valid_values of ptp.mode #}
-{%         if ptp.mode is arista.avd.defined('boundary') and ptp.mode_one_step is arista.avd.defined(true) %}
+{%         if (ptp.mode is arista.avd.defined('boundary') or ptp.mode is arista.avd.defined('e2etransparent')) and ptp.mode_one_step is arista.avd.defined(true) %}
 ptp mode {{ ptp.mode }} one-step
 {%         else %}
 ptp mode {{ ptp.mode }}
