Updated documentation template

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/flow-tracking.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/flow-tracking.j2
@@ -149,6 +149,14 @@
 {%         endif %}
 {%     endif %}
 
+##### Records Summary
+
+| Record | Value |
+| ------ | ----- |
+{%     if flow_tracking.hardware.record_format_ipfix_standard_timestamps_counters is arista.avd.defined(true) %}
+| Record format ipfix standard timestamps counters | {{ flow_tracking.hardware.record_format_ipfix_standard_timestamps_counters }} |
+{%     endif %}
+
 #### Flow Tracking Device Configuration
 
 ```eos
