Feat(eos_cli_config_gen): Add InfluxDB support

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
@@ -335,6 +335,8 @@
 {% include 'eos/platform-apply.j2' %}
 {# EOS CLI #}
 {% include 'eos/eos-cli.j2' %}
+{# influxdb #}
+{% include 'eos/influxdb.j2' %}
 {# custom templates #}
 {% include 'eos/custom-templates.j2' %}
 {# end #}
