--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
@@ -113,6 +113,8 @@
 {% include 'documentation/traffic-policies.j2' %}
 {# Quality Of Service #}
 {% include 'documentation/quality-of-service.j2' %}
+{# Influxdb #}
+{% include 'documentation/influxdb.j2' %}
 {# Priority Flow Control #}
 {% include 'documentation/priority-flow-control.j2' %}
 {# STUN #}
