Correcting the documentation template.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/influxdb.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/influxdb.j2
@@ -4,7 +4,7 @@
  that can be found in the LICENSE file.
 #}
 {# doc - influxdb #}
-{% if influxdb is arista.avd.defined or flow_trackings is arista.avd.defined %}
+{% if influxdb is arista.avd.defined %}
 
 ## Influxdb Streaming
 
