Add IPv6 MLAG configuration Support

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/mlag-configuration.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/mlag-configuration.j2
@@ -9,10 +9,21 @@
 ## MLAG
 
 ### MLAG Summary
-
+{%     if mlag_configuration.peer_address is arista.avd.defined %}
 | Domain-id | Local-interface | Peer-address | Peer-link |
 | --------- | --------------- | ------------ | --------- |
-| {{ mlag_configuration.domain_id }} | {{ mlag_configuration.local_interface }} | {{ mlag_configuration.peer_address }} | {{ mlag_configuration.peer_link }} |
+| {{ mlag_configuration.domain_id }} | {{ mlag_configuration.local_interface }} | {{ mlag_configuration.peer_address }} | {{ mlag_configuration.peer_link }} fart-test |
+{%     endif %}
+{%     if mlag_configuration.ipv4_peer_address is arista.avd.defined %}
+| Domain-id | Local-interface | Peer-address | Peer-link |
+| --------- | --------------- | ------------ | --------- |
+| {{ mlag_configuration.domain_id }} | {{ mlag_configuration.local_interface }} | {{ mlag_configuration.ipv4_peer_address }} | {{ mlag_configuration.peer_link }} |
+{%     endif %}
+{%     if mlag_configuration.ipv6_peer_address is arista.avd.defined %}
+| Domain-id | Local-interface | Peer-address | Peer-link |
+| --------- | --------------- | ------------ | --------- |
+| {{ mlag_configuration.domain_id }} | {{ mlag_configuration.local_interface }} | {{ mlag_configuration.ipv6_peer_address }} | {{ mlag_configuration.peer_link }} |
+{%     endif %}
 
 {%     if mlag_configuration.heartbeat_interval is arista.avd.defined %}
 Heartbeat Interval is {{ mlag_configuration.heartbeat_interval }} milliseconds.
